# dcss-llm

./: .gitignore  README.md  build-crawl.sh  config-local.json  config.template.json  pyproject.toml  run  run-crawl-no-agent  run-tmux
crawl-patches/: 00-turn-hook.llm-patch  output-llm.cc  output-llm.h
dcssllm/: curses_utils.py  keycodes.py  llmutils.py  main.py  non_consuming_rate_limiter.py  quota_aware_router.py
dcssllm/agent/: base_agent.py  util.py
dcssllm/agent/v1/: agent_main.py  common_graph.py  game_state.py  general_instructions.py  subagent_advisor_navigation.py  subagent_current_objective.py  subagent_final_action.py  subagent_main_game.py  subagent_start_game.py  subagent_summarize_last_turn.py  tool.py  tool_game_state.py  tool_longterm_memory.py  tool_send_key_press.py  tool_shortterm_memory.py
